tests/snapshots/run_file__unused_dup_var.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/unused_dup_var.bend
---
NumScott:
λa (a X)

Scott:
λa (a X)
