tests/snapshots/run_file__unused_dup_var.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/unused_dup_var.hvm
---
Lazy mode:
λa (a λb b)

Strict mode:
λa (a λb b)
