tests/snapshots/run_file__world.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/world.hvm
---
λa λ* (a 127758 String.nil)
