tests/snapshots/run_file__wrong_string.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/wrong_string.hvm
---
Invalid readback:
Invalid String Character value '(*, 4)'
Invalid String Character value '*'

""
